# cedar-chatbot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py  test_decode.py
api/: main.py  schemas.py
api/middleware/: auth.py  rate_limiter.py
api/routes/: analytics.py  chat.py  feedback.py
dashboard/: manage.py
dashboard/analytics/: models.py  tests.py  urls.py  views.py
dashboard/analytics/migrations/: 0001_initial.py
dashboard/analytics/templates/analytics/: overview.html
dashboard/config/: settings.py  urls.py
dashboard/core/: admin.py  models.py  tests.py  urls.py  views.py
dashboard/core/management/commands/: seed_demo.py
dashboard/core/migrations/: 0001_initial.py
dashboard/core/templates/core/: dashboard.html  session_detail.html
dashboard/templates/: base.html
dashboard/templates/admin/: login.html
dashboard/templates/registration/: logged_out.html
data/: arabizi_map.json  lebanese_dialogues.json  lebanese_phrases.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
scripts/: fine_tune.py  train_reward_model.py
src/: chatbot.py  dialect_detector.py  generator.py  intent_classifier.py  language_detector.py  memory.py  normalizer.py  sentiment.py
src/rl/: __init__.py  ppo.py  reward_model.py  trainer.py
tests/: test_api.py  test_chatbot.py  test_dialect.py  test_memory.py  test_normalizer.py  test_rl.py
ui/: app.py
